[gd_scene load_steps=4 format=2]

[ext_resource path="res://JourneyFileButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://JourneyPlanner.gd" type="Script" id=2]
[ext_resource path="res://PathNode.tscn" type="PackedScene" id=3]

[node name="JourneyPlanner" type="CanvasLayer"]
script = ExtResource( 2 )
path_node_scene = ExtResource( 3 )
journey_file_button_scene = ExtResource( 1 )

[node name="Map" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
stretch_mode = 5

[node name="UIPanel" type="ColorRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -300.0
color = Color( 0.137255, 0.152941, 0.180392, 1 )

[node name="Return" type="Button" parent="UIPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -52.0
margin_top = 20.0
margin_right = 52.0
margin_bottom = 40.0
text = "Return to Start"

[node name="LoadMap" type="Button" parent="UIPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -130.0
margin_top = 75.0
margin_right = -57.0
margin_bottom = 95.0
text = "Load Map"

[node name="MapLabel" type="RichTextLabel" parent="UIPanel"]
anchor_right = 1.0
margin_left = 120.0
margin_top = 75.0
margin_bottom = 95.0
text = "MapName"

[node name="CreateJourney" type="Button" parent="UIPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -52.0
margin_top = -100.0
margin_right = 52.0002
margin_bottom = -80.0
text = "Create Journey"

[node name="TimeInput" type="TextEdit" parent="UIPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = -50.0
margin_right = 60.0
margin_bottom = -30.0
text = "time (HH:MM)"

[node name="FinishJourney" type="Button" parent="UIPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -52.0
margin_top = -10.0
margin_right = 52.0
margin_bottom = 10.0
text = "Finish Journey"

[node name="Refresh" type="Button" parent="UIPanel"]
margin_left = 220.0
margin_top = 120.0
margin_right = 280.0
margin_bottom = 140.0
text = "Refresh"

[node name="ScrollContainer" type="ScrollContainer" parent="UIPanel"]
anchor_right = 1.0
margin_left = 20.0
margin_top = 140.0
margin_right = -20.0
margin_bottom = 340.0

[node name="VBoxContainer" type="VBoxContainer" parent="UIPanel/ScrollContainer"]

[connection signal="gui_input" from="Map" to="." method="_on_Map_gui_input"]
[connection signal="pressed" from="UIPanel/LoadMap" to="." method="_on_LoadMap_pressed"]
[connection signal="pressed" from="UIPanel/CreateJourney" to="." method="_on_CreateJourney_pressed"]
[connection signal="text_changed" from="UIPanel/TimeInput" to="." method="_on_TimeInput_text_changed"]
[connection signal="pressed" from="UIPanel/FinishJourney" to="." method="_on_FinishJourney_pressed"]
[connection signal="pressed" from="UIPanel/Refresh" to="." method="_on_Refresh_pressed"]
